@@ -4,6 +4,7 @@ Revision history for CGI-Info
 	Use facility local0
 	Improved upload filename generation to prevent overwriting
 	allow() now supports full rule schemas
+	Croak rather than carp on expect, and remove all its code
 
 0.92	Thu Feb 13 15:16:57 EST 2025
 	Return empty string with warnings_as_string() rather than undef when no warnings
